[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
log = "0.4"
structopt = "0.3"
pingora-core = "0.1.0" 
pingora-http = "0.1.0" 
pingora = { version = "0.1", features = [ "lb" ] }
env_logger = "0.9"
